--- a/stylesheets/profile.css
+++ b/stylesheets/profile.css
@@ -69,6 +69,11 @@ body {
     margin-right: 500px;
 }
 
+span h1{
+    background: black;
+    display: inline-block;
+    padding: 10px;
+}
 @media(min-width:768px) {
     #wrapper {
         padding-left: 500px;
